[tool.poetry]
name = "streamlit_stackoverflow"
version = "0.1.1"
description = "Project created to learning Streamlit."
authors = ["Joao Corte <jpaulorc@gmail.com>"]
exclude = ["streamlit_stackoverflow/.git"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
streamlit = "^1.2.0"
pandas = "^1.3.5"
pywaffle = "^0.6.3"
matplotlib = "^3.5.1"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
ipython = "^7.30.1"
isort = "^5.10.1"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
